Quit game implemented
